img adapted to gh-pages. Readme added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <img src="/img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                    <img src="img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                                 </div>
                                 <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -78,7 +78,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="/img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
+                                  <img src="img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -159,7 +159,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                <img src="img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                             </div>
                             <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="/img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
+                              <img src="img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -239,7 +239,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="/img/packs.jpg" alt="">
+                      <img class="img-fluid mx-auto" id="menuImg" src="img/packs.jpg" alt="">
                     </div>
                   </div>
                 </div>
