--- a/menu.html
+++ b/menu.html
@@ -82,13 +82,13 @@
             </p>
             </div>
             <div>
-              <img id="arrozalhornoimg" class="imgCardContent"  src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
-              <img id="paellaalbonimg" class="imgCardContent"  src="/img/paellaalbon.jpg" alt="capture" style="display: none;">
-              <img id="fideuasenyoretimg" class="imgCardContent"  src="/img/fideuasenyoret.jpg" alt="capture" style="display: none;">
-              <img id="macarronescarbonaraimg" class="imgCardContent"  src="/img/macarronescarbo.jfif" alt="capture" style="display: none;">
-              <img id="alitasimg" class="imgCardContent"  src="/img/alitas.jfif" alt="capture" style="display: none;">
-              <img id="halibutimg" class="imgCardContent"  src="/img/halibut.jpg" alt="capture" style="display: none;">
-              <img id="ensaladaimg" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+              <img id="arrozalhornoimg" class="imgCardContent"  src="img/arrozalhorno.jpg" alt="capture" style="display: none;">
+              <img id="paellaalbonimg" class="imgCardContent"  src="img/paellaalbon.jpg" alt="capture" style="display: none;">
+              <img id="fideuasenyoretimg" class="imgCardContent"  src="img/fideuasenyoret.jpg" alt="capture" style="display: none;">
+              <img id="macarronescarbonaraimg" class="imgCardContent"  src="img/macarronescarbo.jfif" alt="capture" style="display: none;">
+              <img id="alitasimg" class="imgCardContent"  src="img/alitas.jfif" alt="capture" style="display: none;">
+              <img id="halibutimg" class="imgCardContent"  src="img/halibut.jpg" alt="capture" style="display: none;">
+              <img id="ensaladaimg" class="imgCardContent"  src="img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
@@ -108,13 +108,13 @@
             </p>
             </div>
             <div>
-              <img id="paellavalimg" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
-              <img id="fideuaclasicaimg" class="imgCardContent"  src="/img/fideua.jpg" alt="capture" style="display: none;">
-              <img id="espiralespestoimg" class="imgCardContent"  src="/img/espiralespesto.jfif" alt="capture" style="display: none;">
-              <img id="guisopolloimg" class="imgCardContent"  src="/img/guisopollo.jfif" alt="capture" style="display: none;">
-              <img id="cremaimg" class="imgCardContent"  src="/img/crema.jfif" alt="capture" style="display: none;">
-              <img id="bacalaoimg" class="imgCardContent"  src="/img/bacalao.jfif" alt="capture" style="display: none;">
-              <img id="ensaladapinyaimg" class="imgCardContent"  src="/img/ensapinya.jfif" alt="capture" style="display: none;">
+              <img id="paellavalimg" class="imgCardContent"  src="img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="fideuaclasicaimg" class="imgCardContent"  src="img/fideua.jpg" alt="capture" style="display: none;">
+              <img id="espiralespestoimg" class="imgCardContent"  src="img/espiralespesto.jfif" alt="capture" style="display: none;">
+              <img id="guisopolloimg" class="imgCardContent"  src="img/guisopollo.jfif" alt="capture" style="display: none;">
+              <img id="cremaimg" class="imgCardContent"  src="img/crema.jfif" alt="capture" style="display: none;">
+              <img id="bacalaoimg" class="imgCardContent"  src="img/bacalao.jfif" alt="capture" style="display: none;">
+              <img id="ensaladapinyaimg" class="imgCardContent"  src="img/ensapinya.jfif" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
@@ -134,13 +134,13 @@
             </p>
             </div>
             <div>
-              <img id="paellapolloimg" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
-              <img id="fideuaboletusimg" class="imgCardContent"  src="/img/fideuaboletus.jfif" alt="capture" style="display: none;">
-              <img id="lasagnaimg" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
-              <img id="traserospolloimg" class="imgCardContent"  src="/img/traserospollo.jfif" alt="capture" style="display: none;">
-              <img id="espiralesverduraimg" class="imgCardContent"  src="/img/espiverdura.jfif" alt="capture" style="display: none;">
-              <img id="rapeimg" class="imgCardContent"  src="/img/rape.jpg" alt="capture" style="display: none;">
-              <img id="ensalada2img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+              <img id="paellapolloimg" class="imgCardContent"  src="img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="fideuaboletusimg" class="imgCardContent"  src="img/fideuaboletus.jfif" alt="capture" style="display: none;">
+              <img id="lasagnaimg" class="imgCardContent"  src="img/lasagna.jpg" alt="capture" style="display: none;">
+              <img id="traserospolloimg" class="imgCardContent"  src="img/traserospollo.jfif" alt="capture" style="display: none;">
+              <img id="espiralesverduraimg" class="imgCardContent"  src="img/espiverdura.jfif" alt="capture" style="display: none;">
+              <img id="rapeimg" class="imgCardContent"  src="img/rape.jpg" alt="capture" style="display: none;">
+              <img id="ensalada2img" class="imgCardContent"  src="img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
@@ -160,13 +160,13 @@
             </p>
             </div>
             <div>
-              <img id="arrozalhorno2img" class="imgCardContent"  src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
-              <img id="paellalbon2img" class="imgCardContent"  src="/img/paellaalbon.jpg" alt="capture" style="display: none;">
-              <img id="fideuaverduimg" class="imgCardContent"  src="/img/fideuaverdu.jfif" alt="capture" style="display: none;">
-              <img id="espaguetisimg" class="imgCardContent"  src="/img/espaguetis.jfif" alt="capture" style="display: none;">
-              <img id="limandaimg" class="imgCardContent"  src="/img/limanda.jfif" alt="capture" style="display: none;">
-              <img id="lomoimg" class="imgCardContent"  src="/img/lomo.jfif" alt="capture" style="display: none;">
-              <img id="ensalada3img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+              <img id="arrozalhorno2img" class="imgCardContent"  src="img/arrozalhorno.jpg" alt="capture" style="display: none;">
+              <img id="paellalbon2img" class="imgCardContent"  src="img/paellaalbon.jpg" alt="capture" style="display: none;">
+              <img id="fideuaverduimg" class="imgCardContent"  src="img/fideuaverdu.jfif" alt="capture" style="display: none;">
+              <img id="espaguetisimg" class="imgCardContent"  src="img/espaguetis.jfif" alt="capture" style="display: none;">
+              <img id="limandaimg" class="imgCardContent"  src="img/limanda.jfif" alt="capture" style="display: none;">
+              <img id="lomoimg" class="imgCardContent"  src="img/lomo.jfif" alt="capture" style="display: none;">
+              <img id="ensalada3img" class="imgCardContent"  src="img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
@@ -192,18 +192,18 @@
             </p>
             </div>
             <div>
-              <img id="paellaval2img" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
-              <img id="paellaverduimg" class="imgCardContent"  src="/img/paellaverduras.jpg" alt="capture" style="display: none;">
-              <img id="fideuachipiimg" class="imgCardContent"  src="/img/fideuachipi.jfif" alt="capture" style="display: none;">
-              <img id="arrozsenyoimg" class="imgCardContent"  src="/img/arrozsenyoret.JPG" alt="capture" style="display: none;">
-              <img id="caracolasimg" class="imgCardContent"  src="/img/caracolas.jfif" alt="capture" style="display: none;">
-              <img id="lasagna2img" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
-              <img id="crepesalmonimg" class="imgCardContent"  src="/img/crepesalmon.jfif" alt="capture" style="display: none;">
-              <img id="polloteriimg" class="imgCardContent"  src="/img/poyoteri.jfif" alt="capture" style="display: none;">
-              <img id="confitpatoimg" class="imgCardContent"  src="/img/confitpato.jfif" alt="capture" style="display: none;">
-              <img id="bombascarneimg" class="imgCardContent"  src="/img/bombascarne.jfif" alt="capture" style="display: none;">
-              <img id="ensaladillaimg" class="imgCardContent"  src="/img/esaladilla.jfif" alt="capture" style="display: none;">              
-              <img id="ensalada4img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+              <img id="paellaval2img" class="imgCardContent"  src="img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="paellaverduimg" class="imgCardContent"  src="img/paellaverduras.jpg" alt="capture" style="display: none;">
+              <img id="fideuachipiimg" class="imgCardContent"  src="img/fideuachipi.jfif" alt="capture" style="display: none;">
+              <img id="arrozsenyoimg" class="imgCardContent"  src="img/arrozsenyoret.JPG" alt="capture" style="display: none;">
+              <img id="caracolasimg" class="imgCardContent"  src="img/caracolas.jfif" alt="capture" style="display: none;">
+              <img id="lasagna2img" class="imgCardContent"  src="img/lasagna.jpg" alt="capture" style="display: none;">
+              <img id="crepesalmonimg" class="imgCardContent"  src="img/crepesalmon.jfif" alt="capture" style="display: none;">
+              <img id="polloteriimg" class="imgCardContent"  src="img/poyoteri.jfif" alt="capture" style="display: none;">
+              <img id="confitpatoimg" class="imgCardContent"  src="img/confitpato.jfif" alt="capture" style="display: none;">
+              <img id="bombascarneimg" class="imgCardContent"  src="img/bombascarne.jfif" alt="capture" style="display: none;">
+              <img id="ensaladillaimg" class="imgCardContent"  src="img/esaladilla.jfif" alt="capture" style="display: none;">              
+              <img id="ensalada4img" class="imgCardContent"  src="img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
