--- a/rating.html
+++ b/rating.html
@@ -63,7 +63,7 @@
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <img src="/img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
+                                    <img src="img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
                                 </div>
                               <div class="carousel-caption d-none d-md-block">
                                 <h5>ESPIRALES CARBONARA</h5>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="/img/pollorustido.jpg" class="carru" alt="polloRustido">
+                                  <img src="img/pollorustido.jpg" class="carru" alt="polloRustido">
                               </div>
                               <div class="carousel-caption d-none d-md-block">
                                 <h5>POLLO RUSTIDO</h5>
@@ -80,7 +80,7 @@
                               </div>
                             </div>
                             <div class="carousel-item">
-                              <img src="/img/paellamarisco.jpg" class="img-fluid" alt="paella marisco">
+                              <img src="img/paellamarisco.jpg" class="img-fluid" alt="paella marisco">
                               <div class="carousel-caption d-none d-md-block">
                                 <h5>PAELLA DE MARISCO</h5>
                                 <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -116,7 +116,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
+                                <img src="img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
                             </div>
                           <div class="carousel-caption d-none d-md-block">
                             <h5>ESPIRALES CARBONARA</h5>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="/img/pollorustido.jpg" class="carru" alt="polloRustido">
+                              <img src="img/pollorustido.jpg" class="carru" alt="polloRustido">
                           </div>
                           <div class="carousel-caption d-none d-md-block">
                             <h5>POLLO RUSTIDO</h5>
@@ -133,7 +133,7 @@
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="/img/paellamarisco.jpg" class="d-block m-auto h-50 w-50" alt="paella marisco">
+                          <img src="img/paellamarisco.jpg" class="d-block m-auto h-50 w-50" alt="paella marisco">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>PAELLA DE MARISCO</h5>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -161,7 +161,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
+                      <img class="img-fluid mx-auto" id="menuImg" src="img/menuFrescor.jfif" alt="">
                     </div>
                   </div>
                 </div>
