--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="row fixed-top container-fluid justify-content-center">
       <a class="logo" href="/index.html">
-        <img class="logo" src="img/logo.jpg" alt="logo.jpg">
+        <img class="logo" src="./img/logo.jpg" alt="logo.jpg">
       </a>
     </div>
     <div class="container-fluid" id="emptyRow"></div>
