--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="row fixed-top container-fluid justify-content-center">
       <a class="logo" href="/index.html">
-        <img class="logo" src="img/logo.jpg" alt="logo.jpg">
+        <img class="logo" src="./img/logo.jpg" alt="logo.jpg">
       </a>
     </div>
     <div class="container-fluid" id="emptyRow"></div>
@@ -68,7 +68,7 @@
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <img src="img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                    <img src="./img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                                 </div>
                                 <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -78,7 +78,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
+                                  <img src="./img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="img/arrozalhorno.jfif" class="img-fluid carru" alt="capture">
+                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -98,7 +98,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="img/fideua.jpg" class="img-fluid carru" alt="capture">
+                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -108,7 +108,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="img/rape.jpg" class="carru" alt="capture">
+                                  <img src="./img/rape.jpg" class="carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="img/ensalada.jpg" class="img-fluid carru" alt="capture">
+                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption  d-md-block">
@@ -159,7 +159,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                             </div>
                             <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
+                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -179,7 +179,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture">
+                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -189,7 +189,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="img/paellaverd.jpg" class="img-fluid carru" alt="capture">
+                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -199,7 +199,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="img/fideuapato.jpg" class="carru" alt="capture">
+                              <img src="./img/fideuapato.jpg" class="carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -209,7 +209,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="img/arroznegro.jpg" class="img-fluid carru" alt="capture">
+                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -239,7 +239,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="img/packs.jpg" alt="">
+                      <img class="img-fluid mx-auto" id="menuImg" src="./img/packs.jpg" alt="">
                     </div>
                   </div>
                 </div>
