--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="hideAll">
   <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light W-100" id="navbar">
         <div class="container-fluid">
@@ -68,7 +68,7 @@
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <img src="./img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                    <img src="./img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/espirales.jpg')">
                                 </div>
                                 <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -78,7 +78,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
+                                  <img src="./img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/pollorustido.jpg')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture">
+                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozalhorno.jfif')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -98,7 +98,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture">
+                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideua.jpg')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -108,7 +108,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/rape.jpg" class="carru" alt="capture">
+                                  <img src="./img/rape.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/rape.jpg')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture">
+                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/ensalada.jpg')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption  d-md-block">
@@ -159,7 +159,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
+                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paella-valenciana-tradicional.jpg')">
                             </div>
                             <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
+                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuaOk.png')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -179,7 +179,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture">
+                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozsenyoret.JPG')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -189,7 +189,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture">
+                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paellaverd.jpg')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -199,7 +199,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuapato.jpg" class="carru" alt="capture">
+                              <img src="./img/fideuapato.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuapato.jpg')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -209,7 +209,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture">
+                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arroznegro.jpg')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -239,7 +239,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="./img/packs.jpg" alt="">
+                      <img class="img-fluid mx-auto" id="menuImg" src="./img/packs.jpg" alt="" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/packs.jpg')">
                     </div>
                   </div>
                 </div>
@@ -249,7 +249,14 @@
       </div>
     </div>
     <div class="container-fluid" id="emptyRowMenu"></div>
-
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <img id="modalImg" src="./img/espirales.jpg" alt="capture">
+            </div>
+          </div>
+        </div>
   </div>
 
     
