modal descriptions added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <img src="./img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/espirales.jpg')">
+                                    <img src="./img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/espirales.jpg','Espirales de verdura con bacon ahumado acompañados de verduras salteadas')">
                                 </div>
                                 <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -78,7 +78,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/pollorustido.jpg')">
+                                  <img src="./img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/pollorustido.jpg','Cuartos traseros de pollo rustidos al horno acompañados de guarnición de verduras y patatas panadera')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozalhorno.jfif')">
+                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozalhorno.jfif','Arroz al horno con longaniza, morcilla y blanquet')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -98,7 +98,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideua.jpg')">
+                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideua.jpg','Fideuà tradicional con mejillón, gambas y tacos de mero')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -108,7 +108,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/rape.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/rape.jpg')">
+                                  <img src="./img/rape.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/rape.jpg','Filetes de rape con acompañamiento de cebolla pochada y salsa ostrogonof')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/ensalada.jpg')">
+                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/ensalada.jpg','Ensalada valenciana con tomate, lechuga, cebolla, huevo duro, atún y aceitunas chafadas')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption  d-md-block">
@@ -159,7 +159,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paella-valenciana-tradicional.jpg')">
+                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paella-valenciana-tradicional.jpg','La paella auténtica valenciana de pollo, conejo, batxoqueta, garrofón y tabella.')">
                             </div>
                             <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuaOk.png')">
+                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuaOk.png','Fideuà tradicional con mejillón, gambas, almejas y tacos de mero')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -179,7 +179,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozsenyoret.JPG')">
+                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozsenyoret.JPG','Arroz del senyoret con gambas, mejillones y sepia. Todo pelado')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -189,7 +189,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paellaverd.jpg')">
+                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paellaverd.jpg','Paella de verduras con cebolla, pimiento, calabacín pochado, alcachofas y espárragos trigueros. Marca de la casa!')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -199,7 +199,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuapato.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuapato.jpg')">
+                              <img src="./img/fideuapato.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuapato.jpg','Fideuà de magret de pato con boletus, cebolla pochada y tacos de foie. Espectacular')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -209,7 +209,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arroznegro.jpg')">
+                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arroznegro.jpg','Arroz de marisco con gambón, pulpitos y tacos de calamar cocinado en su propia tinta.')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -252,11 +252,15 @@
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
+            <div class="modal-content flex-col justify-content-center">
               <img id="modalImg" src="./img/espirales.jpg" alt="capture">
+              <div class="modal-footer flex-col justify-content-center">
+                <p id="modalText" class="textModalFooter"></p>
+              </div>
             </div>
           </div>
         </div>
+        
   </div>
 
     
