--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="http://fonts.cdnfonts.com/css/watterbite-personal-use" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body class="hideAll">
@@ -71,9 +72,9 @@
         <div class="card card-body ">
           <div class="cardContent d-flex">
             <div class="textCardContent">
-              <h5>Los Martes en la Frescor...</h5>
+              <h5>Los Martes en la Frescor</h5>
             <p><span id="arrozalhorno">Arroz al horno</span> <br>
-              <span id="paellaalbon">Paella de pollo, conejo y albóndigas</span><br>
+              <span id="paellaalbon">Paella de pollo conejo y albóndigas</span><br>
               <span id="fideuasenyoret">Fideuà "Del Senyoret"</span><br>
               <span id="macarronescarbonara">Macarrones carbonara</span><br>
               <span id="alitas">Alitas asadas con salsa barbacoa</span><br>
@@ -97,14 +98,14 @@
         <div class="card card-body ">
           <div class="cardContent d-flex">
             <div class="textCardContent">
-              <h5>Los Miércoles en la Frescor...</h5>
+              <h5>Los Miércoles en la Frescor</h5>
             <p><span id="paellaval">Paella Valenciana</span> <br>
               <span id="fideuaclasica">Fideuà clásica marinera</span><br>
-              <span id="espiralespesto">Espirales vegetales con verduras y crema de queso al pesto"</span><br>
+              <span id="espiralespesto">Espirales vegetales con verduras y crema de queso al pesto</span><br>
               <span id="guisopollo">Guiso de pollo con alcachofas</span><br>
               <span id="crema">Crema de marisco</span><br>
               <span id="bacalao">Bacalao al horno con tomate al ajillo</span><br>
-              <span id="ensaladapinya">Ensalada de piña, surimi y salsa rosa</span>
+              <span id="ensaladapinya">Ensalada de piña surimi y salsa rosa</span>
             </p>
             </div>
             <div>
@@ -123,7 +124,7 @@
         <div class="card card-body ">
           <div class="cardContent d-flex">
             <div class="textCardContent">
-              <h5>Los Jueves en la Frescor...</h5>
+              <h5>Los Jueves en la Frescor</h5>
             <p><span id="paellapollo">Paella de pollo y conejo</span> <br>
               <span id="fideuaboletus">Fideuà marinera con boletus</span><br>
               <span id="lasagna">Lasaña de carne"</span><br>
@@ -149,11 +150,11 @@
         <div class="card card-body ">
           <div class="cardContent d-flex">
             <div class="textCardContent">
-              <h5>Los Viernes en la Frescor...</h5>
+              <h5>Los Viernes en la Frescor</h5>
             <p><span id="arrozalhorno2">Arroz al horno</span> <br>
-              <span id="paellalbon2">Paella de pollo, conejo y albóndigas</span><br>
-              <span id="fideuaverdu">Fideuà marinera con verduras"</span><br>
-              <span id="espaguetis">Espaguetis con bacon, york y salsa de champiñones</span><br>
+              <span id="paellalbon2">Paella de pollo conejo y albóndigas</span><br>
+              <span id="fideuaverdu">Fideuà marinera con verduras</span><br>
+              <span id="espaguetis">Espaguetis con bacon york y salsa de champiñones</span><br>
               <span id="limanda">Filete de limanda gratinado con queso y cebollino</span><br>
               <span id="lomo">Cinta de lomo con salsa argentina</span><br>
               <span id="ensalada3">Ensalada de la casa</span>
@@ -175,7 +176,7 @@
         <div class="card card-body ">
           <div class="cardContent d-flex">
             <div class="textCardContent">
-              <h5>Los Sábados en la Frescor...</h5>
+              <h5>Los Sábados en la Frescor</h5>
             <p><span id="paellaval2">Paella Valenciana</span> <br>
               <span id="paellaverdu">Paella de verduras con escarola fresca</span><br>
               <span id="fideuachipi">Fideuà de chipirones y alcachofas"</span><br>
